graos-frontend:1.0.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graos-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graos-frontend
  template:
    metadata:
      labels:
        app: graos-frontend
    spec:
      containers:
      - name: app
        image: adventureandre/graos-frontend:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
