ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-graos-frontend
  namespace: default
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
    - hosts:
        - ia.foxgraos.com.br
      secretName: graos-frontend-tls
  rules:
    - host: ia.foxgraos.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graos-frontend-service
                port:
                  number: 80
